--- a/Best states data Analysis.Rmd
+++ b/Best states data Analysis.Rmd
@@ -335,39 +335,73 @@ graduation_rate2
 
 ```
 
-# renaming cells with no value as NA
-
-```{r, replacing na}
-replacing_na <- graduation_rate2 %>%
-replace(graduation_rate2=="---", "NA") 
-
-replacing_na
-
-```
-
+# Calculating mean values to replace NA's
 
 ```{r}
-sum2011 <- c(72,68,78,81,76,74,83,78,59,71,67,80,84,86,88,83,71,84,83,83,74,77,75,81,82,86,62,86,83,63,77,78,86,80,68,83,77,74,83,86,86,76,87,82,76,78,87,80)
+idaho_mean <- c(77,79,80,80,81,81)
+mean_idaho <- (sum(idaho_mean))/6
 
-mean2011 <- (sum(sum2011))/48
+kentucky_mean <- c(86,88,88,89,90,90,91)
+mean_kentucky <- (sum(kentucky_mean))/7
 
-mean2011
+Oklahoma_mean <- c(85,83,83,82,83,82,85)
+mean_Oklahoma <- (sum(Oklahoma_mean))/7
+
 ```
+
+# renaming cells with no value as NA
+
+
+```{r, replacing_na} 
+graduation_rate2 [13, 2:4] = '79'
+graduation_rate2 [18, 2:3] = '88'
+graduation_rate2 [37, 2:3] = '83'
+
+
+
+```
+
 
 
 
 # Ranking the average graduation rate over the years
  
 ```{r, 10year graduation rate mean}
+graduation_rate2[,2:10] <- lapply(graduation_rate2[,2:10],as.numeric)
 
-nineyear_graduation <- replacing_na %>%
-mutate("10year_mean" =rowMeans(.[ , c( `2011`,`2012`,`2013`,`2014`,`2015`,`2016`,`2017`,`2018`,`2019`)], na.rm = TRUE))
-
+nineyear_graduation <- graduation_rate2 %>%
+mutate("10year_mean" =rowMeans(select(., `2011`,`2012`,`2013`,`2014`,`2015`,`2016`,`2017`,`2018`,`2019`))
+)
 nineyear_graduation
 ```
+# ranked_correction_data
 
+```{r, ranked_correction_data}
+ranked_graduation_data <- nineyear_graduation %>%
+arrange(desc(`10year_mean`)) %>% 
+mutate('2011_ranking' =min_rank(desc(`2011`))) %>% 
+mutate('2012_ranking' = min_rank(desc(`2012`) )) %>% 
+mutate('2013_ranking' = min_rank(desc(`2013`)) ) %>% 
+mutate('2014_ranking' = min_rank(desc(`2014`)) ) %>% 
+mutate('2015_ranking' = min_rank(desc(`2015`)) ) %>% 
+mutate('2016_ranking' = min_rank(desc(`2016`)) ) %>% 
+mutate('2017_ranking' = min_rank(desc(`2017`)) ) %>% 
+mutate('2018_ranking' = min_rank(desc(`2018`)) ) %>% 
+mutate('2019_ranking' = min_rank(desc(`2019`)) ) %>% 
+mutate('10year_ranking' = min_rank(desc(`10year_mean`)) )
 
+ranked_graduation_data
 
+```
+
+# final_ranked_data
+
+```{r}
+final_ranked_graduation <- ranked_graduation_data %>%
+select(state, 12:21)
+
+final_ranked_graduation
+```
 
 
 
