--- a/Ranking_US_States.Rmd
+++ b/Ranking_US_States.Rmd
@@ -2,7 +2,7 @@
 title: "RANKING US STATES ON A YEARLY BASIS AND ON 10 YEAR AVERAGE FROM 2011 TO 2020"
 author: "Beatrice & Moreen"
 date: "3/15/2022"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
@@ -290,6 +290,7 @@ combined_correction_data
 ranked_correction_data <- combined_correction_data %>%
 arrange(desc(`10year_mean`)) %>% 
 mutate('2011_ranking' =min_rank((`correction_2011`))) %>% 
+  
 mutate('2012_ranking' = min_rank((`correction_2012`) )) %>% 
 mutate('2013_ranking' = min_rank((`correction_2013`)) ) %>% 
 mutate('2014_ranking' = min_rank((`correction_2014`)) ) %>% 
@@ -1415,7 +1416,7 @@ top_states <- top_n_states %>%
   labs(title = "Top Ranking States",
        subtitle = " as per the 10yr average from 2011 - 2020")
   
-top_states
+top_states +scale_y_reverse()
 
 
 
@@ -1447,7 +1448,7 @@ top5_improved_states <- top5_mistates%>%
        subtitle = "2011 - 2019")
   
 
-top5_improved_states
+top5_improved_states +scale_y_reverse()
 
 
 ```
@@ -1483,7 +1484,7 @@ random_states_ranks <- random_states%>%
        subtitle = "2011 - 2020")
   
 
-random_states_ranks
+random_states_ranks +scale_y_reverse()
   
    
 ```
@@ -1546,11 +1547,11 @@ summary(multiple_regression2)
 ## y stand for overall ranking 
 
 ```{r model simulation and plotting }
+n <- c(1:51)
+e <- sample(n,10000, replace = TRUE)  #Based on the 51 rankings for each state
+cor <-  sample(n,10000, replace = TRUE) 
 
-e <- sample(1:51, 1)  #Based on the 51 rankings for each state
-cor <-  sample(1:51, 1)
-
-edu <- sample(1:51, 1)
+edu <- sample(n,10000, replace = TRUE) 
 
 
 
